--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@
 
 <header>
     <h1>Genre Tagger</h1>
+    <div id="artwork-warm-status" class="artwork-warm-status hidden"></div>
     <nav id="tab-bar" class="tab-bar hidden">
         <button class="tab-btn active" data-tab="tagger">Tagger</button>
         <button class="tab-btn" data-tab="intersections">Intersections</button>
